dartagnan/src/test/resources/parsers/program/spirv/invalid/malformed-loop-merge-true-label.spv.dis
; SPIR-V
; Version: 1.0
; Schema: 0
               OpCapability Shader
        %ext = OpExtInstImport "GLSL.std.450"
               OpMemoryModel Logical GLSL450
               OpEntryPoint GLCompute %main "main" %ids
               OpSource GLSL 450
       %void = OpTypeVoid
       %bool = OpTypeBool
       %func = OpTypeFunction %void
       %main = OpFunction %void None %func
     %label1 = OpLabel
     %value1 = OpConstantTrue %bool
               OpLoopMerge %label2 %label1 None
               OpBranchConditional %value1 %label2 %label1
     %value2 = OpLogicalNot %bool %value1 ; illegal
     %label2 = OpLabel
               OpReturn
               OpFunctionEnd
